tests/paczka2/big_fuzzy/42467906.err
Error in line 12: 42iTTnWvo A99 76,8
Error in line 11: GFf3lnnA S517 23,6
Error in line 16: GFf3lnnA S938 84,8
Error in line 8: S938 A99 72,0
Error in line 24: S938 S938 84,2
Error in line 40: nBYInfo6b2 A99 46,8
Error in line 46: woQMBuO9 S543 35,0
Error in line 44: S938 S543 87,0
Error in line 55: S938 A99 81,2
Error in line 58: woQMBuO9 S938 4,4
Error in line 77: 0qJyNa49UI A99 0,8
Error in line 82: 0qJyNa49UI S938 97,1
Error in line 72: S938 S938 89,5
Error in line 83: 0qJyNa49UI S543 40,3
Error in line 87: 0qJyNa49UI S517 10,4
Error in line 91: S938 S543 62,8
Error in line 98: S938 S938 20,1
Error in line 126: woQMBuO9 A99 81,9
Error in line 132: 42iTTnWvo S938 73,4
Error in line 136: 0qJyNa49UI S517 64,9
Error in line 141: 0qJyNa49UI A99 69,7
Error in line 147: 0qJyNa49UI S517 72,7
Error in line 164: GFf3lnnA S543 28,2
Error in line 171: S938 A99 78,0
Error in line 176: S938 S543 75,7
Error in line 197: 0qJyNa49UI S543 70,2
Error in line 198: nBYInfo6b2 S517 91,5
Error in line 202: 0qJyNa49UI A99 50,5
Error in line 205: woQMBuO9 S517 28,5
Error in line 210: 2RQcM S543 212,4
Error in line 206: woQMBuO9 A99 78,7
Error in line 218: woQMBuO9 S517 83,8
Error in line 219: woQMBuO9 S543 65,0
Error in line 214: nBYInfo6b2 S938 50,3
Error in line 229: nBYInfo6b2 A99 97,9
Error in line 236: S938 S938 53,4
Error in line 238: GFf3lnnA S938 10,7
Error in line 244: 0qJyNa49UI A99 13,4
Error in line 243: nBYInfo6b2 S543 87,4
